--- a/index.html
+++ b/index.html
@@ -31,36 +31,83 @@
       const formu = document.getElementById("formularioTareas");
       const parrafos = document.getElementById("parrafos");
 
-      const dibujarTareas = () => {
-        parrafos.innerHTML = "";
-        tareas.forEach((tarea, index) => {
-          parrafos.innerHTML += ` <div class="div_tarea"> <p>${tarea}</p> <div> <img src="img/delete-svgrepo-com.svg" alt="eliminar" class="eliminar" data-index="${index}"> <img src="img/success-filled-svgrepo-com.svg" alt="marcado" class="completado" data-index="${index}"> </div> </div> `;
-        });
-      };
+      // fetch("tareas.json")
+      //   .then((response) => response.json())
+      //   .then((data) => {
+      //     console.log(JSON.stringify(data.tareas[0]));
+      //   })
+      //   .catch((error) => {
+      //     console.error("Error al leer el archivo JSON:", error);
+      //   });
+
+      let contTareas = 0;
 
       formu.addEventListener("submit", (event) => {
         event.preventDefault();
+        contTareas + 1;
         const tarea = document.getElementById("tareas").value.trim();
         if (tarea) {
           tareas.push(tarea);
           localStorage.setItem("tareas", JSON.stringify(tareas));
           dibujarTareas();
           formu.reset();
+          let tareaObj = {
+            titulo: tarea,
+            hecha: false,
+          };
+
+          fetch("http://localhost:3000/tareas", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(tareaObj),
+          })
+            .then((response) => response.json(), console.log("bien"))
+            .then((data) => console.log("Succes:", data))
+            .catch((error) => console.error("Error: ", error));
         }
       });
 
+      const dibujarTareas = () => {
+        parrafos.innerHTML = "";
+        fetch("tareas.json")
+          .then((response) => response.json())
+          .then((data) =>
+            data.tareas.forEach((tarea, index) => {
+              parrafos.innerHTML += `<div class="div_tarea"><section class="section-mayor"><p>${data.tareas[index].titulo}</p> <div> <img src="img/delete-svgrepo-com.svg" alt="eliminar" class="eliminar" data-index="${index}"> <img src="img/success-filled-svgrepo-com.svg" alt="marcado" class="completado ${index}" data-index="${index}"> </div></section></div>`;
+              console.log();
+            })
+          );
+      };
+
       parrafos.addEventListener("click", (event) => {
+        const index = event.target.dataset.index;
+        const id = 6;
+        console.log(index);
         if (event.target.classList.contains("eliminar")) {
-          const index = event.target.dataset.index;
           tareas.splice(index, 1);
           localStorage.setItem("tareas", JSON.stringify(tareas));
           dibujarTareas();
         } else if (event.target.classList.contains("completado")) {
-          const index = event.target.dataset.index;
           const tareaElement = event.target
             .closest(".div_tarea")
-            .querySelector("p");
+            .querySelector("section");
           tareaElement.classList.toggle("completada");
+
+          let actHecha = {
+            hecha: true,
+          };
+          fetch(`http://localhost:3000/tareas/${id}`, {
+            method: "PATCH",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(actHecha),
+          })
+            .then((response) => response.json(), console.log("bien"))
+            .then((data) => console.log("Succes:", data))
+            .catch((error) => console.error("Error: ", error));
         }
       });
 
